@@ -1,7 +1,7 @@
 "test level for teleporters"
-PT        t   E
+PT        t t E
 W         WWWWW
-     t
+
      D
 ;
 test levels
